switch to jdk 17 and kotlin 1.6